Corrige integração e uso das bibliotecas de hash-wasm, node-object-hash, SJCL, hash.js e sha.js para benchmark de hashes no browser

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
     <!-- js-sha256 -->
     <script src="https://cdn.jsdelivr.net/npm/js-sha256@0.9.0/build/sha256.min.js"></script>
-    <!-- hash-wasm (precisa de UMD build) -->
-    <script src="https://cdn.jsdelivr.net/npm/hash-wasm@4.11.0/dist/hash-wasm.umd.min.js"></script>
+    <!-- hash-wasm (UMD build via unpkg) -->
+    <script src="https://unpkg.com/hash-wasm@4.11.0/dist/index.umd.js"></script>
     <!-- node-object-hash (browser build) -->
     <script src="https://cdn.jsdelivr.net/npm/node-object-hash@1.3.0/dist/object_hash.umd.js"></script>
     <!-- SJCL -->
